fixed spacing issue on firefox

--- a/static/less/bibiana/section.less
+++ b/static/less/bibiana/section.less
@@ -4,6 +4,7 @@
 
     span.orange {
         display: none;
+        padding-left: 30px;
     }
     &:hover span.orange.hover {
         display: block;
@@ -13,7 +14,6 @@
     }
     .number {
         line-height: 108px;
-        margin-left: 30px;
         .section {
             font-size: 58px;
             font-family: @serifFontFamily;
@@ -32,7 +32,6 @@
     }
 
     span.text {
-        margin-left: 30px;
         font-size: 12px;
         letter-spacing: 1px;
         font-weight: 200;
